[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.0"  
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"  
ark-ec = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4", features = ["derive"] }
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
